Service images and code refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-files
+files/images/articles/
+files/images/directions/
+files/images/projects/
+files/images/text_parts/
+files/images/users/
 redmine
