--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,7 @@
 AddDefaultCharset utf-8
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-l
+RewriteBase /lgmis2/lgmis/
+RewriteRule ^article/([0-9]+)$ public_article.php?type=article&id=$1&full=1 [L]
