--- a/.htaccess
+++ b/.htaccess
@@ -3,13 +3,14 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-l
-RewriteBase /lgmis2/lgmis/
+RewriteBase /
 RewriteRule ^article/([0-9]+)/?$ public_article.php?type=article&id=$1&full=1 [L]
 RewriteRule ^direction/([0-9]+)/?$ public_direction.php?type=direction&id=$1&full=1 [L]
 RewriteRule ^project/([0-9]+)/?$ public_project.php?type=project&id=$1&full=1 [L]
 
 RewriteRule ^articles/?$ index.php [L]
 RewriteRule ^articles/page-([0-9]+)/?$ index.php?page=$1 [L]
+RewriteRule ^page-([0-9]+)/?$ index.php?page=$1 [L]
 
 RewriteRule ^directions/?$ index.php?content_type=dirs [L]
 RewriteRule ^directions/page-([0-9]+)/?$ index.php?content_type=dirs&page=$1 [L]
