--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 AddDefaultCharset utf-8
 RewriteEngine On
+Options -Indexes
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-l
