Global search in admin menu

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ files/images/directions/
 files/images/projects/
 files/images/text_parts/
 files/images/users/
+files/images/reports/
+files/other/reports/
 redmine
 utility_lgmis_lib.php
