--- a/.htaccess
+++ b/.htaccess
@@ -28,3 +28,7 @@ RewriteRule ^contacts/page-([0-9]+)/?$ public_contacts.php?page=$1 [L]
 RewriteRule ^user/([0-9]+)/?$ public_user.php?type=user&id=$1&full=1 [L]
 
 RewriteRule ^lang/([a-z]+)/?$ utility_language_change.php?lang=$1 [L]
+
+RewriteRule ^create_link/file/([0-9]+)/?$ admin_ajax_interceptor.php?download=link&type=file&id=$1 [L]
+
+RewriteRule ^download/([a-zA-Z\d]+)/?$ utility_download.php?public_link=$1 [L]
